// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profit reducer add action should add profit to a non-empty list 1`] = `
Object {
  "message": "test",
  "profit": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "profit": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "profit": 300,
    },
  ],
  "spending": Array [],
}
`;

exports[`profit reducer add action should add profit to empty list 1`] = `
Object {
  "message": "test",
  "profit": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "profit": 300,
    },
  ],
  "spending": Array [],
}
`;

exports[`profit reducer delete action should delete profit when exists 1`] = `
Object {
  "message": Object {
    "id": 1,
  },
  "profit": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "profit": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 2,
      "profit": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 3,
      "profit": 300,
    },
  ],
  "spending": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "profit": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 2,
      "profit": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 3,
      "profit": 300,
    },
  ],
}
`;

exports[`profit reducer delete action should not delete profit when it doesn't exist 1`] = `
Object {
  "message": Object {
    "id": 4,
  },
  "profit": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "profit": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 2,
      "profit": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 3,
      "profit": 300,
    },
  ],
  "spending": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "profit": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 2,
      "profit": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 3,
      "profit": 300,
    },
  ],
}
`;

exports[`profit reducer get action should get profit 1`] = `
Object {
  "profit": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "profit": 300,
    },
  ],
  "spending": Array [],
}
`;

exports[`spending reducer add action should add spending to a non-empty list 1`] = `
Object {
  "message": "test",
  "profit": Array [],
  "spending": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "spending": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "spending": 300,
    },
  ],
}
`;

exports[`spending reducer add action should add spending to empty list 1`] = `
Object {
  "message": "test",
  "profit": Array [],
  "spending": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "spending": 300,
    },
  ],
}
`;

exports[`spending reducer delete action should delete spending when exists 1`] = `
Object {
  "message": Object {
    "id": 1,
  },
  "profit": Array [],
  "spending": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "spending": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 2,
      "spending": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 3,
      "spending": 300,
    },
  ],
}
`;

exports[`spending reducer delete action should not delete spending when it doesn't exist 1`] = `
Object {
  "message": Object {
    "id": 4,
  },
  "profit": Array [],
  "spending": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "spending": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 2,
      "spending": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 3,
      "spending": 300,
    },
  ],
}
`;

exports[`spending reducer edit action should edit spending when exists 1`] = `
Object {
  "message": "test",
  "profit": Array [],
  "spending": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Opłata rachunki",
      "id": 1,
      "spending": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 2,
      "spending": 300,
    },
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 3,
      "spending": 300,
    },
  ],
}
`;

exports[`spending reducer get action should get spending 1`] = `
Object {
  "profit": Array [],
  "spending": Array [
    Object {
      "category": "jedzenie",
      "dateCreated": "2018-01-01",
      "description": "Zakupy",
      "id": 1,
      "spending": 300,
    },
  ],
}
`;
